--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
   <title>Hugo H Trivino</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" type="text/css" media="screen" href="screen.css" />
+  <link href="https://fonts.googleapis.com/css?family=Asul" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Autour+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
 </head>
 <body>
+        <header>
+                <nav id="navigation">
+                    <ul>
+                        <li><a id="nav-abo" href="academics/">Academics</a></li>
+                        <li><a id="nav-pro" href="#resume">Resume</a></li>
+                        <li><a id="nav-con" href="experience/">Experience</a></li>
+                    </ul>
+            </header>
     <main >
       <h1 > Hugo H Trivino </h1>    
     </main>  
